--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
 	/*HEX color to variables*/
 	--colorNavyBlue: #2E2F42;
@@ -26,10 +32,26 @@
 	--footerTextColor: var(--colorCloud);
 }
 
+h1, h2, h3, h4, h5, h6, p {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+ul, ol {
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-left: 0;
+}
+img {
+	display: block;
+	max-width: 100%;
+}
+
 body {
+	margin: 0;
 	font-family: 'Roboto', sans-serif;
 	color: var(--colorSlate);
 	background-color: var(--backgroundColorWhite);
+
 }
 
 .list {list-style: none}
@@ -228,3 +250,5 @@ body {
 	color: var(--heroTextColor);
 	background-color: var(--pressedStateColor);
 }
+
+.version {display: none}
