--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,7 @@ body {
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 }
+.footer p {max-width: 264px;}
 
 .portfolio {
 	background-color: var(--backgroundColorWhite);
